tests/rosetta/out/Smalltalk/arithmetic-integer-2.out
/workspace/mochi/tests/rosetta/out/Smalltalk/arithmetic-integer-2.st:4: parse error, expected '|' or identifier
